--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,12 +15,13 @@
     <meta name="twitter:title" content="{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}">
     <meta name="twitter:description" content="{% if page.description %}{{ page.description | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
     {% if page.image %}
-    <meta property="twitter:image:src" content="{{ site.url }}{{page.image }}">
+    <meta property="twitter:image" content="{{ site.url }}{{page.image }}">
     {% else %}
-    <meta property="twitter:image:src" content="{{ "/assets/img/banner.png" | prepend: site.baseurl | prepend: site.url }}">
+    <meta property="twitter:image" content="{{ "/assets/img/banner.png" | prepend: site.baseurl | prepend: site.url }}">
     {% endif %}
 
     <!-- Social: Facebook / Open Graph -->
+    <meta property="fb:app_id" content="400182400316623">
     <meta property="og:url" content="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
     <meta property="og:title" content="{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}">
     {% if page.image %}
