add post, ga share events

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -31,6 +31,7 @@
   'components/huge-text',
   'components/share',
   'components/about',
+  'components/video',
   'components/menu',
   'components/book',
   'components/link',
