--- a/_includes/share.html
+++ b/_includes/share.html
@@ -6,12 +6,14 @@
     onclick="window.open(this.href, 'facebook-share','width=580, height=296');return false;" 
     title="Compartilhe no Facebook" 
     class="button"
+    onmousedown="ga('send', 'social', 'Facebook', 'share', '{{ site.url }}{{ page.url }}')"
   >
     facebook
   </a>
   <a
     href="whatsapp://send?text={{ page.twitter_text }} {{ site.url }}{{ page.url }}"
     class="button"
+    onmousedown="ga('send', 'social', 'Whatsapp', 'share', '{{ site.url }}{{ page.url }}')"
   >
     whatsapp
   </a>
@@ -21,6 +23,7 @@
     onclick="window.open(this.href, 'twitter-share', 'width=550, height=235');return false;" 
     title="Compartilhe no Twitter" 
     class="button"
+    onmousedown="ga('send', 'social', 'Twitter', 'share', '{{ site.url }}{{ page.url }}')"
   >
   twitter
   </a>
@@ -30,6 +33,7 @@
     onclick="window.open(this.href, 'google-plus-share', 'width=490, height=530');return false;" 
     title="Compartilhe no Google+" 
     class="button"
+    onmousedown="ga('send', 'social', 'Plus', 'share', '{{ site.url }}{{ page.url }}')"
   >
     plus
   </a>
