--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -24,3 +24,10 @@ h5,
 h6 {
   font-family: Nunito, "Helvetica Neue", Arial, sans-serif;
 }
+
+blockquote {
+  font-style: italic;
+  border-left: 5px solid #999;
+  padding: 5px 20px;
+  margin: 0 0 4rem;
+}
