--- a/src/scss/components/_pre.scss
+++ b/src/scss/components/_pre.scss
@@ -2,6 +2,7 @@ pre {
   font-size: 0.9em;
   line-height: 1.3;
   padding: 2rem;
+  overflow-x: scroll;
 
   span {
     font-family: 'Roboto Mono','Consolas','Menlo',monospace;
@@ -189,6 +190,7 @@ pre {
 /* Name.Namespace */
 .highlight .nt {
   color: #fff;
+  font-weight: bold;
 }
 
 /* Name.Tag */
