--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -29,6 +29,7 @@
   'components/tags',
   'components/pre',
   'components/huge-text',
+  'components/newsletter-form',
   'components/share',
   'components/about',
   'components/video',
